--- a/package.json
+++ b/package.json
@@ -25,3 +25,9 @@
     "vite": "^7.0.4"
   }
 }
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "deploy": "gh-pages -d dist"
+}
